update search list and theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,10 @@
       fxLayout="row wrap"
       fxLayout.xs="column"
       fxLayoutAlign="space-between center"
-      style="height: auto !important; min-height: 56px;"
+      style="height: auto !important; min-height: 80px;"
   >
       <a class="color-white" [routerLink]="['/']" style="white-space: normal;">
-          <!-- <img src="assets/images/logo_mes.png" alt="MES" width="140"> -->
-          Sceiba
+          <img src="assets/images/sceiba-logo-white.png" alt="Sceiba" width="120">
       </a>
       
       <div
