--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,7 @@
     
         <app-polar-chart *ngIf="loadCharts"
             [dataChild]="homeCharts.type"
-            [_yAxisLabel]="'Tipo de Organizaciones'">
+            [_yAxisLabel]="'Palabras Claves'">
         </app-polar-chart>
     </div>
 
