--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,106 @@
 
 @import './styles/typography';
 @import './styles/app-theme';
-//@import './styles/general'
+/* For use in src/lib/core/theming/_palette.scss */
+$md-blue: (
+    50 : #e1edf0,
+    100 : #b5d1db,
+    200 : #84b3c3,
+    300 : #5295aa,
+    400 : #2d7e98,
+    500 : #086786,
+    600 : #075f7e,
+    700 : #065473,
+    800 : #044a69,
+    900 : #023956,
+    A100 : #88ceff,
+    A200 : #55b9ff,
+    A400 : #22a3ff,
+    A700 : #0899ff,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #ffffff,
+    )
+);
+
+$md-green: (
+    50 : #e0f1ef,
+    100 : #b3ddd8,
+    200 : #80c7be,
+    300 : #4db0a3,
+    400 : #269f90,
+    500 : #008e7c,
+    600 : #008674,
+    700 : #007b69,
+    800 : #00715f,
+    900 : #005f4c,
+    A100 : #90ffe4,
+    A200 : #5dffd8,
+    A400 : #2affcc,
+    A700 : #10ffc6,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$md-grey: (
+    50 : #e7e6e6,
+    100 : #c3c1c1,
+    200 : #9b9898,
+    300 : #726e6e,
+    400 : #544f4f,
+    500 : #363030,
+    600 : #302b2b,
+    700 : #292424,
+    800 : #221e1e,
+    900 : #161313,
+    A100 : #f66767,
+    A200 : #f33737,
+    A400 : #f60000,
+    A700 : #dd0000,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #ffffff,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #ffffff,
+        A400 : #ffffff,
+        A700 : #ffffff,
+    )
+);
+
 
 $md-azul: (
     50 : #e1e5ea,
@@ -72,54 +171,21 @@ $md-azullight: (
     )
 );
 
-$md-grey: (
-    50 : #eaeaea,
-    100 : #cacaca,
-    200 : #a6a6a6,
-    300 : #828282,
-    400 : #686868,
-    500 : #4d4d4d,
-    600 : #464646,
-    700 : #3d3d3d,
-    800 : #343434,
-    900 : #252525,
-    A100 : #f18282,
-    A200 : #ec5454,
-    A400 : #ff0e0e,
-    A700 : #f30000,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #ffffff,
-        500 : #ffffff,
-        600 : #ffffff,
-        700 : #ffffff,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #ffffff,
-        A700 : #ffffff,
-    )
-);
-
 $md-greylight: (
-    50 : #f3f3f3,
-    100 : #e2e2e2,
-    200 : #cecece,
-    300 : #bababa,
-    400 : #acacac,
-    500 : #9d9d9d,
-    600 : #959595,
-    700 : #8b8b8b,
-    800 : #818181,
-    900 : #6f6f6f,
-    A100 : #fdf1f1,
-    A200 : #f8c3c3,
-    A400 : #ff8a8a,
-    A700 : #ff7070,
+    50 : #faf9fa,
+    100 : #f2f1f2,
+    200 : #e9e8ea,
+    300 : #e0dfe1,
+    400 : #d9d8da,
+    500 : #d2d1d4,
+    600 : #cdcccf,
+    700 : #c7c6c9,
+    800 : #c1c0c3,
+    900 : #b6b5b9,
+    A100 : #ffffff,
+    A200 : #ffffff,
+    A400 : #ffffff,
+    A700 : #f6f4ff,
     contrast: (
         50 : #000000,
         100 : #000000,
@@ -130,7 +196,7 @@ $md-greylight: (
         600 : #000000,
         700 : #000000,
         800 : #000000,
-        900 : #ffffff,
+        900 : #000000,
         A100 : #000000,
         A200 : #000000,
         A400 : #000000,
@@ -139,11 +205,9 @@ $md-greylight: (
 );
 
 
-
-
 /* - colors - */
-$toco-primary: mat-palette($md-grey);
-$toco-accent: mat-palette($mat-grey);
+$toco-primary: mat-palette($md-blue);
+$toco-accent: mat-palette($md-greylight);
 //$toco-warn: mat-palette($mat-grey, 200, 100, 900);
 $toco-warn: mat-palette($mat-deep-orange, A700);
 
