--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -17,7 +17,7 @@
     </ng-template>
 
     <ng-template #search_charts_button>
-      <button mat-icon-button  matTooltip="Organizaciones" (click)="changeView()">
+      <button mat-icon-button  matTooltip="Búsqueda" (click)="changeView()">
         <mat-icon>list</mat-icon>
       </button>
     </ng-template>
