--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,9 +23,12 @@
           </button>
 
           <button mat-icon-button [matMenuTriggerFor]="menuHelp" matTooltip="Ayuda">
-              <mat-icon>help</mat-icon>
+              <mat-icon class="mat-18">help</mat-icon>
           </button>
 
+          <button mat-icon-button [matMenuTriggerFor]="menuLogin" matTooltip="Ayuda">
+              <mat-icon class="mat-18">data_usage</mat-icon>
+          </button>
 
       </div>
 
@@ -63,6 +66,18 @@
       Contactos
   </a>
 </mat-menu>
+
+<mat-menu #menuLogin="matMenu">
+
+    <a mat-menu-item [routerLink]="['https://sceiba-lab.upr.edu.cu/login']">
+        <mat-icon>lock</mat-icon>
+        Login
+    </a>
+    <a mat-menu-item [routerLink]="['https://sceiba-lab.upr.edu.cu/login']">
+        <mat-icon>info</mat-icon>
+        Sing up
+    </a>
+  </mat-menu>
 
 <router-outlet></router-outlet> 
 
