--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,8 +26,8 @@
               <mat-icon class="mat-18">help</mat-icon>
           </button>
 
-          <button mat-icon-button [matMenuTriggerFor]="menuLogin" matTooltip="Ayuda">
-              <mat-icon class="mat-18">data_usage</mat-icon>
+          <button mat-icon-button [matMenuTriggerFor]="menuLogin" matTooltip="">
+              <mat-icon class="mat-18">more_vert</mat-icon>
           </button>
 
       </div>
@@ -69,13 +69,13 @@
 
 <mat-menu #menuLogin="matMenu">
 
-    <a mat-menu-item [routerLink]="['https://sceiba-lab.upr.edu.cu/login']">
+    <a mat-menu-item href="{{ urlLogin }}">
         <mat-icon>lock</mat-icon>
-        Login
+        Autenticarse
     </a>
-    <a mat-menu-item [routerLink]="['https://sceiba-lab.upr.edu.cu/login']">
-        <mat-icon>info</mat-icon>
-        Sing up
+    <a mat-menu-item href="{{ urlSignUp }}">
+        <mat-icon>assignment_ind</mat-icon>
+        Registarse
     </a>
   </mat-menu>
 
