--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,3 +5,14 @@
 .a-grey:hover{
     text-decoration: underline;
 }
+.w-20{
+    width: 30%;
+    min-width: 15em;
+}
+.w-70{
+    width: 70%;
+    min-width: 15em;
+}
+.text-center{
+    text-align: center;
+}
