update search component with "loading" and add ng-recaptcha

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,10 +1,9 @@
 
-    <mat-toolbar color="accent"
+<mat-toolbar color="accent"
     fxLayout="row wrap"
     fxLayout.xs="column"
     fxLayoutAlign="space-between center"
-    style="height: 80px;"
-  >
+    style="height: 80px;">
   
     <span>Búsqueda</span>
   
@@ -22,7 +21,10 @@
       </button>
     </ng-template>
 
-  </mat-toolbar>
+</mat-toolbar>
+
+<toco-progress [loading]="loading"></toco-progress>
+
 <mat-drawer-container autosize>
     <mat-drawer #drawer mode="side" opened position="start">
      <!--  <app-aggregations fxLayout="row wrap" fxLayout.xs="column wrap" fxFlex="{{ currentlayout.width }}"
