add contact component and update home and route

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -97,6 +97,12 @@
         </mat-card>
     </div>
 
+    <mat-card class="mat-elevation-z1 w-70 m-1 mb-1">
+        <mat-card-content>
+            <app-contact></app-contact>
+        </mat-card-content>
+    </mat-card>
+
     <mat-card class="mat-elevation-z6 text-center w-70">
         <mat-card-content>
             <h1 class="mat-h1"><strong>Próximamente</strong></h1>
