--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -17,7 +17,7 @@
 
     <re-captcha (resolved)="resolved($event)" siteKey="{{ siteKey }}"></re-captcha>
 
-    <button mat-raised-button (click)="send()" color="primary">
+    <button mat-raised-button (click)="send()" color="primary" class="mt-1">
         <mat-icon matPrefix>send</mat-icon>
         Enviar
     </button>
