--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,13 +6,204 @@
     text-decoration: underline;
 }
 .w-20{
-    width: 30%;
+    width: 25%;
     min-width: 15em;
 }
 .w-70{
     width: 70%;
     min-width: 15em;
 }
+.w-80{
+    width: 80%;
+    min-width: 15em;
+}
 .text-center{
     text-align: center;
+}
+
+.text-xxl{
+    font-size: 9vw;
+}
+
+.text-xl{
+    font-size: 5vw;
+}
+
+.text-m{
+    font-size: 4vw;
+}
+
+.text-s{
+    font-size: 2.2vw;
+}
+
+.text-xs{
+    font-size: 1.8vw;
+}
+.right-stats{
+    min-width: 11em;
+    padding: 0 16px;
+    margin: 1em 0;
+}
+
+.line-vertical{
+    width: 60%;
+    border-left: solid 2px grey;
+    align-self: normal !important;
+    padding: 16px;
+}
+.aling-center{
+    margin: 1em;
+    max-width: 12em;
+}
+
+.w-img{
+    width: 120px;
+}
+
+/***** SLIDES *****/
+.mySlides {display: none}
+
+
+/* Slideshow container */
+.container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+.container img {vertical-align: middle;}
+
+.container .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.65);
+    color: white;
+    padding: 16px;
+}
+.container p {
+    font-size: xx-large;
+}
+  
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: 20px;
+    height: 20px;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    transition: 0.6s ease;
+    border-radius: 50%;
+}
+  
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+    color: #ffffff;
+    font-size: xx-large;
+    padding: 8px 25px;
+    position: absolute;
+    bottom: 30px;
+    // width: 95%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+
+@media (max-width: 650px){
+    .text{
+        font-size: medium;
+    }
+    // .container .content{
+    //     top: 0;
+    //     left: 0;
+    //     right: 0;
+    //     bottom: 0;
+    // }
+    // .container p {
+    //     font-size: 3vw;
+    // }
+}
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+// @media only screen and (max-width: 600px) {
+//     .container p {
+//         font-size: 3vw;
+//     }
+// }
+
+// /* Medium devices (landscape tablets, 768px and up) */
+// @media only screen and (max-width: 768px) {
+//     .container p {
+//         font-size: 2.5vw;
+//     }
+// }
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+    .container p {
+        font-size: 3vw;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
 }
